# weather_frame

./: .gitattributes  README.md  pyproject.toml  weather-frame.service
.github/workflows/: deploy.yml  test.yml
docs/: deploy.md
scripts/: deploy.sh
src/weather_frame/: display_service.py  main.py  utils.py  weather_service.py
src/weather_frame/config/: logging_config.json
src/weather_frame/templates/: index.html  unavailable.html
test/: conftest.py  test_display_service.py  test_main.py  test_utils.py  test_weather_service.py
