[project]
name = "weather_frame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.1",
    "geopy>=2.4.1",
    "pillow>=11.3.0",
    "pytest>=8.4.1",
    "requests>=2.32.4",
]

[project.optional-dependencies]
# Raspberry Pi only — drives the Inky Impression e-ink panel (ARM-only wheels).
# Install on the Pi with:  uv pip install -e ".[pi]"
pi = [
    "inky>=1.5.0",
]
# Development / CI extras.
dev = [
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
addopts = "-q"
